--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div class="w3-panel w3-red">
+  <!--<div class="w3-panel w3-red">
     <h3>Danger!</h3>
     <p>Some field names appear to be swapped in the API.</p>
     <p>Sometimes only one road at an intersection is returned.</p>
@@ -30,7 +30,7 @@
     <h3>Warning!</h3>
     <p>There is no error handling when no road is returned.</p>
     <p>This webpage has only limited data validation for text fields.</p>
-  </div>
+  </div>-->
 
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
